# cds-rdm

./: .gitignore  .invenio  CHANGES.md  Dockerfile  Pipfile  README.md  cds_testrig_config.yaml  cds_testrig_config.yml  conftest.py  docker-compose.full.yml  docker-compose.yml  docker-services.yml  index.html  invenio.cfg  krb5.conf  last-updated.txt  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run-js-linter.sh  wipe_recreate.sh
site/: .gitkeep  package.json  pyproject.toml  run-tests.sh  setup.cfg
site/cds_rdm/: __init__.py  app_data  cli.py  components.py  config.py  errors.py  ext.py  files.py  generators.py  jobs.py  minters.py  models.py  oidc.py  permissions.py  pids.py  proxies.py  resolver.py  schemes.py  tasks.py  utils.py  views.py  webpack.py
site/cds_rdm/administration/: __init__.py  clc_sync.py  dashboard.py  harvester_reports.py  permissions.py
site/cds_rdm/alembic/: 1746783030_create_clc_sync_table.py  1771314900_change_datetime_types.py  __init__.py  dd80f65f557b_creation_of_cds_rdm_migration_models.py
site/cds_rdm/assets/semantic-ui/js/my_site/: .gitkeep
site/cds_rdm/assets/semantic-ui/less/cds_rdm/: .gitkeep
site/cds_rdm/authors/: api.py  models.py  pidprovider.py  schema.py  services.py
site/cds_rdm/authors/jsonschemas/: __init__.py
site/cds_rdm/authors/jsonschemas/records/: authors-v1.0.0.json
site/cds_rdm/clc_sync/: __init__.py  models.py  proxies.py
site/cds_rdm/clc_sync/resources/: __init__.py  config.py  errors.py  resource.py  utils.py
site/cds_rdm/clc_sync/services/: __init__.py  components.py  config.py  errors.py  permissions.py  results.py  schema.py  service.py  tasks.py  utils.py
site/cds_rdm/communities/: __init__.py  views.py
site/cds_rdm/custom_fields/: __init__.py  cern.py  meeting.py  open_access.py  publishing.py
site/cds_rdm/harvester_download/: __init__.py
site/cds_rdm/harvester_download/resources/: __init__.py  config.py  resource.py
site/cds_rdm/harvester_runs/: __init__.py  logs.py
site/cds_rdm/inspire_harvester/: __init__.py  jobs.py  logger.py  reader.py  transform_entry.py  transformer.py  utils.py  writer.py
site/cds_rdm/inspire_harvester/load/: draft.py  files.py  matcher.py
site/cds_rdm/inspire_harvester/transform/: __init__.py  config.py  context.py  policies.py  resource_types.py  splitter.py  transform_entry.py  utils.py
site/cds_rdm/inspire_harvester/transform/mappers/: __init__.py  article.py  basic_metadata.py  contributors.py  custom_fields.py  files.py  identifiers.py  mapper.py  preprint.py  thesis.py
site/cds_rdm/inspire_harvester/update/: __init__.py  config.py  engine.py  field.py
site/cds_rdm/inspire_harvester/update/fields/: __init__.py  base.py  creatibutors.py  custom_fields.py  identifiers.py  metadata.py
site/cds_rdm/ldap/: __init__.py  api.py  client.py  errors.py  user_importer.py  utils.py
site/cds_rdm/legacy/: __init__.py  errors.py  models.py  redirector.py  resolver.py
site/cds_rdm/migration/: README.md  __init__.py  cli.py  errors.py  extract.py  load.py  resolver.py  streams.py  streams.yaml
site/cds_rdm/migration/data/: .gitkeep
site/cds_rdm/migration/data/users/: .gitkeep
site/cds_rdm/migration/transform/: __init__.py  transform.py  user_transform.py
site/cds_rdm/migration/transform/models/: __init__.py  base.py  note.py  overdo.py
site/cds_rdm/migration/transform/xml_processing/: __init__.py  contributors.py  dates.py  dumper.py  errors.py  rules.py
site/cds_rdm/migration/transform/xml_processing/quality/: __init__.py  decorators.py  parsers.py
site/cds_rdm/notifications/: __init__.py  committee_approval.py  ep_approval.py  generators.py
site/cds_rdm/previewer/: __init__.py  event_viewer.py  gltf_previewer.py  gltf_viewer.py
site/cds_rdm/requests/: __init__.py  committee_approval.py  committee_approval_state.py  ep_approval.py  ep_approval_state.py  ep_public_record.py  views.py
site/cds_rdm/reviews/: __init__.py  policy.py
site/cds_rdm/stats/: __init__.py
site/cds_rdm/stats/templates/: __init__.py
site/cds_rdm/stats/templates/events/: __init__.py
site/cds_rdm/stats/templates/events/file_download/: __init__.py
site/cds_rdm/stats/templates/events/record_view/: __init__.py
site/cds_rdm/templates/semantic-ui/cds_rdm/: file_not_found.html  legacy_version_not_found.html  matomo-prod.html  matomo-test.html  page.html  version_not_found.html
site/cds_rdm/templates/semantic-ui/cds_rdm/administration/: admin_base_template.html  harvester_reports.html  harvester_run_report.html
site/cds_rdm/templates/semantic-ui/cds_rdm/harvester_download/: report_body.html
site/cds_rdm/vcs/: handlers.py
site/tests/: __init__.py  conftest.py  fake_crossref_client.py  fake_datacite_client.py  test_committee_approval.py  test_components.py  test_ep_approval.py  test_merge_names.py  test_permissions.py  test_tasks.py  test_views.py  utils.py
site/tests/authors/: test_service.py
site/tests/clc_sync/: test_clc_resources.py  test_clc_services.py
site/tests/communities/: test_resources.py
site/tests/inspire_harvester/: __init__.py  conftest.py  test_harvester_job.py  test_metadata_only_new_version.py  test_multiple_document_types_external.py  test_reader.py  test_transformer.py  test_update_create_CDS_records.py  test_update_create_logic.py  test_vocabulary_matching.py  test_writer.py  utils.py
site/tests/inspire_harvester/app_data/vocabularies/: experiments.yaml
site/tests/inspire_harvester/data/: completely_new_inspire_rec.json  inspire_response_15_records_page_1.json  inspire_response_15_records_page_2.json  record_CDS_DOI_multiple_doc_types_2700388.json  record_fcc_unsynced_2797728.json  record_no_CDS_DOI_2734694.json  record_non_CDS_DOI_errata_2908071.json  record_with_2_CDS_ids.json  record_with_cds_DOI.json  record_with_erratum_DOI.json  record_with_no_cds_DOI.json  record_with_no_cds_DOI_multiple_doc_type.json  record_with_no_cds_DOI_multiple_doc_type2.json  record_with_scoap3_art.json
site/tests/ldap/: test_ldap.py
site/tests/legacy/: test_redirector.py
site/tests/migration/: test_redirector.py
(+445 files in other folders)
