
[metadata]
name = cds-rdm
version = attr: cds_rdm.__version__

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False

[options.extras_require]
tests =
    pytest-black>=0.3.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-mock>=3

[options.entry_points]
flask.commands =
    cds-admin = cds_rdm.cli:cds_admin
invenio_base.apps =
    cds_rdm = cds_rdm:CDS_RDM_UI
invenio_base.api_apps =
    cds_rdm = cds_rdm:CDS_RDM_REST
invenio_base.blueprints =
    cds_rdm_migration = cds_rdm.legacy.redirector:create_blueprint
invenio_celery.tasks =
    cds_rdm_tasks = cds_rdm.tasks
invenio_jobs.jobs =
    sync_cern_users = cds_rdm.jobs:SyncUsers
    sync_cern_groups = cds_rdm.jobs:SyncGroups
    sync_local_accounts_to_names = cds_rdm.jobs:SyncLocalAccounts
    merge_duplicate_names = cds_rdm.jobs:MergeDuplicateNames
invenio_pidstore.minters =
    legacy = cds_rdm.minters:legacy_recid_minter
idutils.custom_schemes =
    cds_ref = cds_rdm.schemes:cds_reference_number
    aleph = cds_rdm.schemes:aleph
    inspire = cds_rdm.schemes:inspire
    inspire_author = cds_rdm.schemes:inspire_author
    lcds = cds_rdm.schemes:legacy_cds
invenio_db.alembic =
    cds_rdm = cds_rdm:alembic
invenio_db.models =
    cds_migration_models = cds_rdm.legacy.models

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=cds_rdm --cov-report=term-missing
testpaths = tests cds_rdm
