
[metadata]
name = cds-rdm
version = attr: cds_rdm.__version__

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=3.0.0,<4.0.0
    pytest-mock>=3

[options.entry_points]
flask.commands =
    cds-admin = cds_rdm.cli:cds_admin
invenio_base.apps =
    cds_rdm = cds_rdm:CDS_RDM_UI
invenio_base.api_apps =
    cds_rdm = cds_rdm:CDS_RDM_REST
invenio_base.blueprints =
    cds_rdm_migration = cds_rdm.legacy.redirector:create_blueprint
invenio_base.api_blueprints =
    clc_sync = cds_rdm.views:create_cds_clc_sync_bp
invenio_celery.tasks =
    cds_rdm_tasks = cds_rdm.tasks
invenio_jobs.jobs =
    sync_cern_users = cds_rdm.jobs:SyncUsers
    sync_cern_groups = cds_rdm.jobs:SyncGroups
    sync_local_accounts_to_names = cds_rdm.jobs:SyncLocalAccounts
    merge_duplicate_names = cds_rdm.jobs:MergeDuplicateNames
    process_inspire = cds_rdm.inspire_harvester.jobs:ProcessInspireHarvesterJob
invenio_pidstore.minters =
    legacy = cds_rdm.minters:legacy_recid_minter
idutils.custom_schemes =
    cdsrn = cds_rdm.schemes:cds_reference_number
    aleph = cds_rdm.schemes:aleph
    inspire = cds_rdm.schemes:inspire
    inspire_author = cds_rdm.schemes:inspire_author
    cds = cds_rdm.schemes:cds
    indico = cds_rdm.schemes:indico
invenio_db.alembic =
    cds_rdm = cds_rdm:alembic
invenio_db.models =
    cds_migration_models = cds_rdm.legacy.models
    cds_clc_sync_model = cds_rdm.clc_sync.models
invenio_administration.views =
    clc_sync_list = cds_rdm.administration.clc_sync:CLCSyncListView
    clc_sync_detail = cds_rdm.administration.clc_sync:CLCSyncDetailView
invenio_access.actions =
    clc_sync_access_action = cds_rdm.generators:clc_sync_action
invenio_assets.webpack =
    cds_rdm_theme = cds_rdm.webpack:theme
invenio_previewer.previewers =
    cds_rdm_gltf_previewer = cds_rdm.previewer.gltf_previewer

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=cds_rdm --cov-report=term-missing
testpaths = tests cds_rdm
